--- a/notebook files/KModes Clustering.ipynb
+++ b/notebook files/KModes Clustering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3ba5ee9f",
+   "id": "14d0e5b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d6dd47ed",
+   "id": "c4382794",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc6a20f",
+   "id": "90c69f68",
    "metadata": {},
    "source": [
     "# Data Preparing"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f46071ae",
+   "id": "3785951f",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b4accf8f",
+   "id": "1704d843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "374b68e6",
+   "id": "90e4c854",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "00ee2461",
+   "id": "3aea9fb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0af23bb2",
+   "id": "dd9351a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "eec8477d",
+   "id": "2d050e4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "39c307b5",
+   "id": "a06c3eb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "c3d985fb",
+   "id": "69cc780e",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "969c389e",
+   "id": "67a6b553",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "0538908a",
+   "id": "5fd9e07c",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7100f0b",
+   "id": "9372ca7b",
    "metadata": {},
    "source": [
     "####"
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "724deb16",
+   "id": "b42c2891",
    "metadata": {},
    "source": [
     "# Model training with KModes"
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59532a72",
+   "id": "93723735",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,37 @@
       "Init: initializing clusters\n",
       "Starting iterations...\n",
       "Run 1, iteration: 1/100, moves: 15046, cost: 179754.0\n",
-      "Run 1, iteration: 2/100, moves: 3177, cost: 174693.0\n"
+      "Run 1, iteration: 2/100, moves: 3177, cost: 174693.0\n",
+      "Run 1, iteration: 3/100, moves: 3761, cost: 174538.0\n",
+      "Run 1, iteration: 4/100, moves: 736, cost: 174538.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 2, iteration: 1/100, moves: 11427, cost: 183800.0\n",
+      "Run 2, iteration: 2/100, moves: 3283, cost: 183800.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 3, iteration: 1/100, moves: 7105, cost: 171247.0\n",
+      "Run 3, iteration: 2/100, moves: 2010, cost: 171247.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 4, iteration: 1/100, moves: 7926, cost: 185517.0\n",
+      "Run 4, iteration: 2/100, moves: 1295, cost: 185517.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 5, iteration: 1/100, moves: 11360, cost: 184235.0\n",
+      "Run 5, iteration: 2/100, moves: 5576, cost: 182109.0\n",
+      "Run 5, iteration: 3/100, moves: 5421, cost: 179016.0\n",
+      "Run 5, iteration: 4/100, moves: 1308, cost: 179016.0\n",
+      "Best run was number 3\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 1, iteration: 1/100, moves: 15555, cost: 179266.0\n",
+      "Run 1, iteration: 2/100, moves: 1405, cost: 178319.0\n"
      ]
     }
    ],
@@ -902,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e55ffe4",
+   "id": "a050d6be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -910,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "898fba61",
+   "id": "fd6ca3b6",
    "metadata": {},
    "outputs": [],
    "source": []
