--- a/notebook files/KModes Clustering.ipynb
+++ b/notebook files/KModes Clustering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "14d0e5b6",
+   "id": "6ede59d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c4382794",
+   "id": "8d8950c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90c69f68",
+   "id": "11bf1f63",
    "metadata": {},
    "source": [
     "# Data Preparing"
@@ -34,173 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "3785951f",
+   "execution_count": null,
+   "id": "da431c6f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>workclass</th>\n",
-       "      <th>fnlwgt</th>\n",
-       "      <th>education</th>\n",
-       "      <th>education-num</th>\n",
-       "      <th>marital-status</th>\n",
-       "      <th>occupation</th>\n",
-       "      <th>relationship</th>\n",
-       "      <th>race</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>capital-gain</th>\n",
-       "      <th>capital-loss</th>\n",
-       "      <th>hours-per-week</th>\n",
-       "      <th>country</th>\n",
-       "      <th>salary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>39</td>\n",
-       "      <td>State-gov</td>\n",
-       "      <td>77516</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Never-married</td>\n",
-       "      <td>Adm-clerical</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>2174</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50</td>\n",
-       "      <td>Self-emp-not-inc</td>\n",
-       "      <td>83311</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Exec-managerial</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>38</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>215646</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>Handlers-cleaners</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>53</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>234721</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Handlers-cleaners</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>28</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>338409</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Prof-specialty</td>\n",
-       "      <td>Wife</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Cuba</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   age          workclass  fnlwgt   education  education-num  \\\n",
-       "0   39          State-gov   77516   Bachelors             13   \n",
-       "1   50   Self-emp-not-inc   83311   Bachelors             13   \n",
-       "2   38            Private  215646     HS-grad              9   \n",
-       "3   53            Private  234721        11th              7   \n",
-       "4   28            Private  338409   Bachelors             13   \n",
-       "\n",
-       "        marital-status          occupation    relationship    race      sex  \\\n",
-       "0        Never-married        Adm-clerical   Not-in-family   White     Male   \n",
-       "1   Married-civ-spouse     Exec-managerial         Husband   White     Male   \n",
-       "2             Divorced   Handlers-cleaners   Not-in-family   White     Male   \n",
-       "3   Married-civ-spouse   Handlers-cleaners         Husband   Black     Male   \n",
-       "4   Married-civ-spouse      Prof-specialty            Wife   Black   Female   \n",
-       "\n",
-       "   capital-gain  capital-loss  hours-per-week         country  salary  \n",
-       "0          2174             0              40   United-States   <=50K  \n",
-       "1             0             0              13   United-States   <=50K  \n",
-       "2             0             0              40   United-States   <=50K  \n",
-       "3             0             0              40   United-States   <=50K  \n",
-       "4             0             0              40            Cuba   <=50K  "
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#adult dataset from UCI\n",
+    "#the dataset is pretty much clean to feed into model\n",
+    "#so I won't need many steps of data preparation\n",
     "data = pd.read_csv('../data/adult.csv')\n",
     "data.head()"
    ]
@@ -208,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1704d843",
+   "id": "378ffefc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "90e4c854",
+   "id": "9d5651e4",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3aea9fb8",
+   "id": "dc2120a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "dd9351a3",
+   "id": "1c78b26b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2d050e4b",
+   "id": "a00f20c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a06c3eb7",
+   "id": "f1e05473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "69cc780e",
+   "id": "39bde114",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "67a6b553",
+   "id": "d65997c1",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "5fd9e07c",
+   "id": "1fec05d4",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9372ca7b",
+   "id": "6db79b80",
    "metadata": {},
    "source": [
     "####"
@@ -761,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42c2891",
+   "id": "dd3f0d63",
    "metadata": {},
    "source": [
     "# Model training with KModes"
@@ -770,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93723735",
+   "id": "6b3705a9",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +754,71 @@
       "Init: initializing clusters\n",
       "Starting iterations...\n",
       "Run 1, iteration: 1/100, moves: 15555, cost: 179266.0\n",
-      "Run 1, iteration: 2/100, moves: 1405, cost: 178319.0\n"
+      "Run 1, iteration: 2/100, moves: 1405, cost: 178319.0\n",
+      "Run 1, iteration: 3/100, moves: 1075, cost: 178226.0\n",
+      "Run 1, iteration: 4/100, moves: 2316, cost: 175985.0\n",
+      "Run 1, iteration: 5/100, moves: 29, cost: 175985.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 2, iteration: 1/100, moves: 9617, cost: 174138.0\n",
+      "Run 2, iteration: 2/100, moves: 2479, cost: 174138.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 3, iteration: 1/100, moves: 12211, cost: 168640.0\n",
+      "Run 3, iteration: 2/100, moves: 712, cost: 168640.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 4, iteration: 1/100, moves: 10884, cost: 172655.0\n",
+      "Run 4, iteration: 2/100, moves: 2384, cost: 171374.0\n",
+      "Run 4, iteration: 3/100, moves: 2165, cost: 168877.0\n",
+      "Run 4, iteration: 4/100, moves: 556, cost: 168877.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 5, iteration: 1/100, moves: 13908, cost: 167755.0\n",
+      "Run 5, iteration: 2/100, moves: 2188, cost: 167755.0\n",
+      "Best run was number 5\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 1, iteration: 1/100, moves: 12585, cost: 163742.0\n",
+      "Run 1, iteration: 2/100, moves: 7256, cost: 162175.0\n",
+      "Run 1, iteration: 3/100, moves: 685, cost: 162175.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 2, iteration: 1/100, moves: 12703, cost: 165774.0\n",
+      "Run 2, iteration: 2/100, moves: 2162, cost: 165774.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 3, iteration: 1/100, moves: 6888, cost: 171582.0\n",
+      "Run 3, iteration: 2/100, moves: 624, cost: 171582.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 4, iteration: 1/100, moves: 11279, cost: 167773.0\n",
+      "Run 4, iteration: 2/100, moves: 2513, cost: 167176.0\n",
+      "Run 4, iteration: 3/100, moves: 456, cost: 167176.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 5, iteration: 1/100, moves: 10507, cost: 165770.0\n",
+      "Run 5, iteration: 2/100, moves: 2465, cost: 165217.0\n",
+      "Run 5, iteration: 3/100, moves: 52, cost: 165217.0\n",
+      "Best run was number 1\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 1, iteration: 1/100, moves: 10661, cost: 162933.0\n",
+      "Run 1, iteration: 2/100, moves: 1606, cost: 162153.0\n",
+      "Run 1, iteration: 3/100, moves: 92, cost: 162153.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n"
      ]
     }
    ],
@@ -932,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a050d6be",
+   "id": "9e462192",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -940,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd6ca3b6",
+   "id": "cead14d4",
    "metadata": {},
    "outputs": [],
    "source": []
