--- a/notebook files/KModes Clustering.ipynb
+++ b/notebook files/KModes Clustering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fedfd88b",
+   "id": "dc6b5b50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c899723b",
+   "id": "dda8925f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45ffb543",
+   "id": "31b5aea8",
    "metadata": {},
    "source": [
     "# Data Preparing"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "31e8e61f",
+   "id": "1673193f",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e6f07270",
+   "id": "51113fbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c9fc8415",
+   "id": "7a660faa",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c4700f52",
+   "id": "d6d2b078",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "ad52540f",
+   "id": "896b17fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "daebcda6",
+   "id": "213892cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "d0a44616",
+   "id": "26301d80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8e5f67a3",
+   "id": "9baae4de",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "beedca56",
+   "id": "ee6f556e",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1486251e",
+   "id": "fc41d61d",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe7008db",
+   "id": "d389b9b3",
    "metadata": {},
    "source": [
     "####"
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7f6926d",
+   "id": "bb735f05",
    "metadata": {},
    "source": [
     "# Model training with KModes"
@@ -771,272 +771,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "f7c4d456",
+   "execution_count": null,
+   "id": "a6b5b7d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 1, iteration: 1/100, moves: 0, cost: 249458.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 2, iteration: 1/100, moves: 0, cost: 249458.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 3, iteration: 1/100, moves: 0, cost: 249458.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 4, iteration: 1/100, moves: 0, cost: 249458.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 5, iteration: 1/100, moves: 0, cost: 249458.0\n",
-      "Best run was number 1\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 1, iteration: 1/100, moves: 5038, cost: 211845.0\n",
-      "Run 1, iteration: 2/100, moves: 1152, cost: 210671.0\n",
-      "Run 1, iteration: 3/100, moves: 552, cost: 210671.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 2, iteration: 1/100, moves: 5493, cost: 215304.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 3, iteration: 1/100, moves: 1956, cost: 218474.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 4, iteration: 1/100, moves: 6038, cost: 210671.0\n",
-      "Run 4, iteration: 2/100, moves: 2118, cost: 210671.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 5, iteration: 1/100, moves: 9772, cost: 219243.0\n",
-      "Run 5, iteration: 2/100, moves: 770, cost: 219243.0\n",
-      "Best run was number 1\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 1, iteration: 1/100, moves: 12314, cost: 215419.0\n",
-      "Run 1, iteration: 2/100, moves: 5168, cost: 208576.0\n",
-      "Run 1, iteration: 3/100, moves: 6538, cost: 206228.0\n",
-      "Run 1, iteration: 4/100, moves: 1383, cost: 206186.0\n",
-      "Run 1, iteration: 5/100, moves: 271, cost: 206186.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 2, iteration: 1/100, moves: 5175, cost: 214323.0\n",
-      "Run 2, iteration: 2/100, moves: 1578, cost: 214323.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 3, iteration: 1/100, moves: 3389, cost: 205369.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 4, iteration: 1/100, moves: 10293, cost: 201094.0\n",
-      "Run 4, iteration: 2/100, moves: 3953, cost: 197939.0\n",
-      "Run 4, iteration: 3/100, moves: 1043, cost: 197939.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 5, iteration: 1/100, moves: 8405, cost: 195405.0\n",
-      "Run 5, iteration: 2/100, moves: 934, cost: 195405.0\n",
-      "Best run was number 5\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 1, iteration: 1/100, moves: 5592, cost: 195999.0\n",
-      "Run 1, iteration: 2/100, moves: 319, cost: 195999.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 2, iteration: 1/100, moves: 14669, cost: 184148.0\n",
-      "Run 2, iteration: 2/100, moves: 8454, cost: 183145.0\n",
-      "Run 2, iteration: 3/100, moves: 1028, cost: 183145.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 3, iteration: 1/100, moves: 8530, cost: 184336.0\n",
-      "Run 3, iteration: 2/100, moves: 3028, cost: 184336.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 4, iteration: 1/100, moves: 7730, cost: 186152.0\n",
-      "Run 4, iteration: 2/100, moves: 5650, cost: 186152.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 5, iteration: 1/100, moves: 6488, cost: 192358.0\n",
-      "Run 5, iteration: 2/100, moves: 364, cost: 192358.0\n",
-      "Best run was number 2\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 1, iteration: 1/100, moves: 15046, cost: 179754.0\n",
-      "Run 1, iteration: 2/100, moves: 3177, cost: 174693.0\n",
-      "Run 1, iteration: 3/100, moves: 3761, cost: 174538.0\n",
-      "Run 1, iteration: 4/100, moves: 736, cost: 174538.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 2, iteration: 1/100, moves: 11427, cost: 183800.0\n",
-      "Run 2, iteration: 2/100, moves: 3283, cost: 183800.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 3, iteration: 1/100, moves: 7105, cost: 171247.0\n",
-      "Run 3, iteration: 2/100, moves: 2010, cost: 171247.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 4, iteration: 1/100, moves: 7926, cost: 185517.0\n",
-      "Run 4, iteration: 2/100, moves: 1295, cost: 185517.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 5, iteration: 1/100, moves: 11360, cost: 184235.0\n",
-      "Run 5, iteration: 2/100, moves: 5576, cost: 182109.0\n",
-      "Run 5, iteration: 3/100, moves: 5421, cost: 179016.0\n",
-      "Run 5, iteration: 4/100, moves: 1308, cost: 179016.0\n",
-      "Best run was number 3\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 1, iteration: 1/100, moves: 15555, cost: 179266.0\n",
-      "Run 1, iteration: 2/100, moves: 1405, cost: 178319.0\n",
-      "Run 1, iteration: 3/100, moves: 1075, cost: 178226.0\n",
-      "Run 1, iteration: 4/100, moves: 2316, cost: 175985.0\n",
-      "Run 1, iteration: 5/100, moves: 29, cost: 175985.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 2, iteration: 1/100, moves: 9617, cost: 174138.0\n",
-      "Run 2, iteration: 2/100, moves: 2479, cost: 174138.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 3, iteration: 1/100, moves: 12211, cost: 168640.0\n",
-      "Run 3, iteration: 2/100, moves: 712, cost: 168640.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 4, iteration: 1/100, moves: 10884, cost: 172655.0\n",
-      "Run 4, iteration: 2/100, moves: 2384, cost: 171374.0\n",
-      "Run 4, iteration: 3/100, moves: 2165, cost: 168877.0\n",
-      "Run 4, iteration: 4/100, moves: 556, cost: 168877.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 5, iteration: 1/100, moves: 13908, cost: 167755.0\n",
-      "Run 5, iteration: 2/100, moves: 2188, cost: 167755.0\n",
-      "Best run was number 5\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 1, iteration: 1/100, moves: 12585, cost: 163742.0\n",
-      "Run 1, iteration: 2/100, moves: 7256, cost: 162175.0\n",
-      "Run 1, iteration: 3/100, moves: 685, cost: 162175.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 2, iteration: 1/100, moves: 12703, cost: 165774.0\n",
-      "Run 2, iteration: 2/100, moves: 2162, cost: 165774.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 3, iteration: 1/100, moves: 6888, cost: 171582.0\n",
-      "Run 3, iteration: 2/100, moves: 624, cost: 171582.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 4, iteration: 1/100, moves: 11279, cost: 167773.0\n",
-      "Run 4, iteration: 2/100, moves: 2513, cost: 167176.0\n",
-      "Run 4, iteration: 3/100, moves: 456, cost: 167176.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 5, iteration: 1/100, moves: 10507, cost: 165770.0\n",
-      "Run 5, iteration: 2/100, moves: 2465, cost: 165217.0\n",
-      "Run 5, iteration: 3/100, moves: 52, cost: 165217.0\n",
-      "Best run was number 1\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 1, iteration: 1/100, moves: 10661, cost: 162933.0\n",
-      "Run 1, iteration: 2/100, moves: 1606, cost: 162153.0\n",
-      "Run 1, iteration: 3/100, moves: 92, cost: 162153.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 2, iteration: 1/100, moves: 12427, cost: 176669.0\n",
-      "Run 2, iteration: 2/100, moves: 347, cost: 176669.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 3, iteration: 1/100, moves: 12826, cost: 161758.0\n",
-      "Run 3, iteration: 2/100, moves: 5588, cost: 159697.0\n",
-      "Run 3, iteration: 3/100, moves: 333, cost: 159697.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 4, iteration: 1/100, moves: 11493, cost: 160349.0\n",
-      "Run 4, iteration: 2/100, moves: 1903, cost: 160349.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 5, iteration: 1/100, moves: 10922, cost: 163592.0\n",
-      "Run 5, iteration: 2/100, moves: 1324, cost: 163592.0\n",
-      "Best run was number 3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 1, iteration: 1/100, moves: 14473, cost: 160029.0\n",
-      "Run 1, iteration: 2/100, moves: 5872, cost: 156986.0\n",
-      "Run 1, iteration: 3/100, moves: 1742, cost: 155232.0\n",
-      "Run 1, iteration: 4/100, moves: 483, cost: 155232.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 2, iteration: 1/100, moves: 11272, cost: 158888.0\n",
-      "Run 2, iteration: 2/100, moves: 1508, cost: 158888.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 3, iteration: 1/100, moves: 10656, cost: 164935.0\n",
-      "Run 3, iteration: 2/100, moves: 3505, cost: 164935.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 4, iteration: 1/100, moves: 8318, cost: 165195.0\n",
-      "Run 4, iteration: 2/100, moves: 2042, cost: 163781.0\n",
-      "Run 4, iteration: 3/100, moves: 45, cost: 163781.0\n",
-      "Init: initializing centroids\n",
-      "Init: initializing clusters\n",
-      "Starting iterations...\n",
-      "Run 5, iteration: 1/100, moves: 11179, cost: 157744.0\n",
-      "Run 5, iteration: 2/100, moves: 611, cost: 157744.0\n",
-      "Best run was number 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cost = []\n",
     "K = range(1,10)\n",
@@ -1044,17 +782,18 @@
     "#I set n_init 5 so it will run 5 times for one loop\n",
     "#and init as 'random' so it will choose the observations at random from data\n",
     "#Train the data with different cluster values to pick the best cluster K value\n",
+    "#I cleared the outputs cause it is too long\n",
     "\n",
     "for num_clusters in list(K):\n",
     "    kmode = KModes(n_clusters=num_clusters, init = \"random\", n_init = 5, verbose=1)\n",
     "    kmode.fit_predict(user_data)\n",
-    "    cost.append(kmode.cost_)"
+    "    cost.append(kmode.cost_)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "fbdd48d0",
+   "execution_count": 61,
+   "id": "fbe66715",
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +802,7 @@
        "Text(0, 0.5, 'Cost')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1093,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "298d2c3b",
+   "id": "a2bfdfda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c59278bb",
+   "id": "e1aedf63",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1118,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20868933",
+   "id": "e60fd189",
    "metadata": {},
    "outputs": [],
    "source": []
