--- a/notebook files/KModes Clustering.ipynb
+++ b/notebook files/KModes Clustering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dc6b5b50",
+   "id": "6dde0bfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dda8925f",
+   "id": "260c74bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b5aea8",
+   "id": "7b7bd3d3",
    "metadata": {},
    "source": [
     "# Data Preparing"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "1673193f",
+   "id": "be5ca7dc",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "51113fbd",
+   "id": "ed15c867",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7a660faa",
+   "id": "d42ce8b6",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d6d2b078",
+   "id": "0954e267",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "896b17fa",
+   "id": "5f7036f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "213892cc",
+   "id": "07c16836",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "26301d80",
+   "id": "edd1f443",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "9baae4de",
+   "id": "4c452365",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ee6f556e",
+   "id": "7b3e4fa7",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "fc41d61d",
+   "id": "26c707a1",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d389b9b3",
+   "id": "e56bf4e7",
    "metadata": {},
    "source": [
     "####"
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb735f05",
+   "id": "c362a3ab",
    "metadata": {},
    "source": [
     "# Model training with KModes"
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6b5b7d7",
+   "id": "f3cef68b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "fbe66715",
+   "id": "7d0fbe66",
    "metadata": {},
    "outputs": [
     {
@@ -831,10 +831,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a2bfdfda",
+   "execution_count": 62,
+   "id": "c6c85fce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 1, iteration: 1/100, moves: 12048, cost: 170832.0\n",
+      "Run 1, iteration: 2/100, moves: 5067, cost: 169673.0\n",
+      "Run 1, iteration: 3/100, moves: 333, cost: 169673.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 2, iteration: 1/100, moves: 7842, cost: 187110.0\n",
+      "Run 2, iteration: 2/100, moves: 344, cost: 187110.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 3, iteration: 1/100, moves: 8913, cost: 195169.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 4, iteration: 1/100, moves: 12383, cost: 172172.0\n",
+      "Run 4, iteration: 2/100, moves: 3967, cost: 170335.0\n",
+      "Run 4, iteration: 3/100, moves: 8, cost: 170335.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 5, iteration: 1/100, moves: 10743, cost: 190999.0\n",
+      "Run 5, iteration: 2/100, moves: 1622, cost: 190999.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 6, iteration: 1/100, moves: 9896, cost: 190635.0\n",
+      "Run 6, iteration: 2/100, moves: 2883, cost: 188480.0\n",
+      "Run 6, iteration: 3/100, moves: 3314, cost: 185746.0\n",
+      "Run 6, iteration: 4/100, moves: 1438, cost: 185165.0\n",
+      "Run 6, iteration: 5/100, moves: 70, cost: 185165.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 7, iteration: 1/100, moves: 11288, cost: 187041.0\n",
+      "Run 7, iteration: 2/100, moves: 4267, cost: 182073.0\n",
+      "Run 7, iteration: 3/100, moves: 1984, cost: 182073.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 8, iteration: 1/100, moves: 9033, cost: 192076.0\n",
+      "Run 8, iteration: 2/100, moves: 5460, cost: 187744.0\n",
+      "Run 8, iteration: 3/100, moves: 234, cost: 187744.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 9, iteration: 1/100, moves: 7352, cost: 187928.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 10, iteration: 1/100, moves: 11734, cost: 183848.0\n",
+      "Run 10, iteration: 2/100, moves: 830, cost: 183848.0\n",
+      "Best run was number 1\n"
+     ]
+    }
+   ],
    "source": [
     "#Now I can train with no. of clusters 5 and get results from kmodes algorithm\n",
     "#and I set n_init to 10 to train 10 times for all data\n",
@@ -848,16 +911,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e1aedf63",
+   "execution_count": 65,
+   "id": "2c772224",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32561, (32561, 70))"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check the rows\n",
+    "len(fitClusters), user_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "006eea82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    7867\n",
+       "0    7131\n",
+       "4    6778\n",
+       "3    5965\n",
+       "1    4820\n",
+       "Name: cluster, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#convert it into dataframe\n",
+    "clusters = pd.DataFrame({'cluster':fitClusters})\n",
+    "clusters['cluster'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "7294326c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#now I got the different groups of data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8756cb3",
+   "metadata": {},
+   "source": [
+    "#####"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c9ee06e",
+   "metadata": {},
+   "source": [
+    "# Insert cluster groups into original dataset"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e60fd189",
+   "id": "4789fa3f",
    "metadata": {},
    "outputs": [],
    "source": []
